--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -6,8 +6,10 @@
     <link rel="icon" href="../public/favicon.ico" type="image/x-icon" />
   </head>
   <body>
-    <h1>Bienvenido a <%= title %></h1>
-    <p>El portal donde podrá crear sus propios juegos!</p>
-    <p><a href="/quizes/question">Comience a jugar</p>
+    <h2>Quiz. el juego de las preguntas</h2>
+    <%= respuesta %>
+    <p>
+        <a href="/quizes/question">Inténtelo otra vez</a>
+    </p>
   </body>
 </html>
