--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -1,15 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel="icon" href="../public/favicon.ico" type="image/x-icon" />
-  </head>
-  <body>
-    <h2>Quiz. el juego de las preguntas</h2>
-    <%= respuesta %>
-    <p>
+    
+    <p><%= respuesta %></p>
         <a href="/quizes/question">Inténtelo otra vez</a>
-    </p>
-  </body>
-</html>
