--- a/views/quizes/question.ejs
+++ b/views/quizes/question.ejs
@@ -1,16 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel="icon" href="../public/favicon.ico" type="image/x-icon" />
-  </head>
-  <body>
-    <h2>Quiz: el juego de las preguntas</h2>
     <form method="get" action="/quizes/answer">
-    Pregunta:<%= pregunta %>
+    <p>Pregunta:<%= pregunta %></p>
         <input type="text" name="respuesta" values="Responda aquí" />
         <input type="submit" value="Enviar"/>
     </form>
-  </body>
-</html>
