--- a/views/author.ejs
+++ b/views/author.ejs
@@ -2,6 +2,6 @@
 
 <p><strong>Nombre: </strong>Angel Latorre Trabanco</p>
 <br/>
-<img src="/public/images/gustavo.jpg"/>
-<br/>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Mmax3yEZX58" frameborder="0" allowfullscreen></iframe>
+<img src="images/gustavo.jpg" width="150"/>
+
+
